--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>TooManyBikes</title>
+    <title>Too Many Bikes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link rel="icon" href="/assets/favicon.ico">
 
     {{content-for "head"}}
 
