--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link rel="icon" href="/assets/favicon.ico">
+    <link rel="icon" href="/assets/images/favicon.ico">
 
     {{content-for "head"}}
 
